--- a/multisend-web/src/main/resources/application-test.properties
+++ b/multisend-web/src/main/resources/application-test.properties
@@ -1,10 +1,10 @@
-multisend.aliyun.accessKey=LTAI5tEyJBdpDmQnshTKs7y9
-multisend.aliyun.accessKeySecret=6uZdnfqyPFnGbdTkQYsj3hzW2VSRJn
-multiSend.aliyun.endpoint=dysmsapi.aliyuncs.com
-multisend.aliyun.singleName=MultiSend
-# 这个是验证码的emplateId
-multisend.aliyun.templateId=SMS_275295780
+multisend.aliyun.accessKey=
+multisend.aliyun.accessKeySecret=
+multiSend.aliyun.endpoint=
+multisend.aliyun.singleName=
+
+multisend.aliyun.templateId=
 
 
-multisend.rabbitmq.exchange=yyyy
-multisend.rabbitmq.queueName=yyyy
+multisend.rabbitmq.exchange=
+multisend.rabbitmq.queueName=
