--- a/multisend-web/src/main/resources/application.properties
+++ b/multisend-web/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=test
 server.port=8081
 
-spring.rabbitmq.host=175.178.233.17
+spring.rabbitmq.host=
 spring.rabbitmq.port=5672
 #spring.rabbitmq.username=root
 spring.rabbitmq.username=root
