优雅打印和链路追踪

--- a/multisend-dao/pom.xml
+++ b/multisend-dao/pom.xml
@@ -42,7 +42,12 @@
 <!--            <scope>runtime</scope>-->
 <!--        </dependency>-->
 
-
+        <!--实现优雅日志打印-->
+        <dependency>
+            <groupId>cn.monitor4all</groupId>
+            <artifactId>log-record-starter</artifactId>
+            <version>1.0.4.1</version>
+        </dependency>
 
 
 
